# SurveyFlow

./: .gitignore  .replit  SURVEY_IMPLEMENTATION_PLAN.md  backfill_report.sh  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix
.agents/memory/: MEMORY.md  ims-tmg-credentials.md  mmm-pipeline.md
.github/workflows/: mmm-daily-finalize.yml  mmm-taboola-spend.yml
attached_assets/: ModeSmartFunnel_1768252908784.md  Pasted--Executive-Summary-A-modern-multi-brand-co-registration-platform-that-transforms-user-engagement--1758402298189_1758402298192.txt  Pasted--form-name-form1-method-post-action-syslogin-aspx-id-fo_1783437808046.txt  Pasted--table-width-100-cellpadding-0-cellspacing-0-border-0-s_1769562548787.txt  Pasted-Hey-Brian-Here-s-that-features-list-pulled-out-nice-and-clean-Complete-Features-List-Phase-1--1758402498537_1758402498537.txt  Pasted-The-source-list-for-the-Content-Security-Policy-directive-default-src-contains-an-invalid-source--1761521172562_1761521172563.txt  Pasted-The-source-list-for-the-Content-Security-Policy-directive-default-src-contains-an-invalid-source--1761693675272_1761693675273.txt  Pasted-This-is-an-existing-Replit-project-an-offer-management-_1783171498495.txt
client/src/: App.tsx  index.css
mmm-pipeline-package/: README.md
mmm-pipeline-package/config/: config.py
mmm-pipeline-package/debug/: audit_meta_spend.py  check_june15.py  crossref_june1_14.py  debug_ad_urls.py  debug_freeshares.py  debug_ims_leads.py  debug_orphans.py  (+4 more)
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts  types.ts
(+57 files in other folders)
