[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "google-ads>=31.1.0",
    "google-auth>=2.55.1",
    "gspread>=6.2.1",
    "pandas>=3.0.3",
    "playwright>=1.61.0",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
]
